<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/reminder"
            android:title="@string/medicine" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/reminder"
            android:title="@string/event" />
            android:icon="@drawable/ic_local_pharmacy_black_24dp"
            android:title="@string/medicine" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/navcontacts"
            android:title="@string/contact"/>

    </group>



</menu>
