<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_View="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_event"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:padding="5dp"
    card_View:cardBackgroundColor="@color/cardview_light_background"
    card_View:cardCornerRadius="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/event_row"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:context="com.company.eldhelp.EventActivity">

        <ImageView
            android:id="@+id/imageViewEvent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/medicineImage"
            card_View:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView_event_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/eventName"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_event_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/eventTime"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_event_name_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/eventDate"
            android:textSize="15sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>

