<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_View="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:padding="5dp"
    card_View:cardBackgroundColor="@color/cardview_light_background"
    card_View:cardCornerRadius="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/medicine_row"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:context="com.company.eldhelp.MedicineActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/medicineImage"
            card_View:srcCompat="@drawable/pills" />

        <TextView
            android:id="@+id/textView_medicine_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/medicineName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_medicine_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:text="@string/medicineTime"
            android:textSize="20sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
